log/build_2021-06-09_22-31-51/control_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target control_pid_p1_node[0m
[ 50%] Built target control_pid_p2_node
[ 75%] [32mBuilding CXX object CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::PIDcicle()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:294:52: error: cannot convert ‘std::chrono::duration<long int, std::ratio<1, 1000> >’ to ‘float’ in assignment
  294 |    INTerrorX= (errorX + errorX_ant1 + errorX_ant2) * dt;
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                    |
      |                                                    std::chrono::duration<long int, std::ratio<1, 1000> >
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:297:29: error: no match for ‘operator/’ (operand types are ‘int’ and ‘std::chrono::duration<long int, std::ratio<1, 1000> >’)
  297 |    Dx=(errorX - errorX_ant1)/dt;
      |       ~~~~~~~~~~~~~~~~~~~~~~^~~
      |               |              |
      |               int            std::chrono::duration<long int, std::ratio<1, 1000> >
In file included from /usr/include/c++/9/mutex:39,
                 from /usr/include/c++/9/future:38,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:1:
/usr/include/c++/9/chrono:498:7: note: candidate: ‘template<class _Rep1, class _Period, class _Rep2> constexpr std::chrono::duration<std::chrono::__common_rep_t<_Rep1, typename std::enable_if<(! std::chrono::__is_duration<_Rep2>::value), _Rep2>::type>, _Period> std::chrono::operator/(const std::chrono::duration<_Rep1, _Period1>&, const _Rep2&)’
  498 |       operator/(const duration<_Rep1, _Period>& __d, const _Rep2& __s)
      |       ^~~~~~~~
/usr/include/c++/9/chrono:498:7: note:   template argument deduction/substitution failed:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:297:30: note:   mismatched types ‘const std::chrono::duration<_Rep1, _Period1>’ and ‘int’
  297 |    Dx=(errorX - errorX_ant1)/dt;
      |                              ^~
In file included from /usr/include/c++/9/mutex:39,
                 from /usr/include/c++/9/future:38,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:1:
/usr/include/c++/9/chrono:508:7: note: candidate: ‘template<class _Rep1, class _Period1, class _Rep2, class _Period2> constexpr typename std::common_type<_Rep1, _Rep2>::type std::chrono::operator/(const std::chrono::duration<_Rep1, _Period1>&, const std::chrono::duration<_Rep2, _Period2>&)’
  508 |       operator/(const duration<_Rep1, _Period1>& __lhs,
      |       ^~~~~~~~
/usr/include/c++/9/chrono:508:7: note:   template argument deduction/substitution failed:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:297:30: note:   mismatched types ‘const std::chrono::duration<_Rep1, _Period1>’ and ‘int’
  297 |    Dx=(errorX - errorX_ant1)/dt;
      |                              ^~
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
